test/conformance/chainsaw/validate/clusterpolicy/standard/cel/authorizor-checks/with-permissions/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80
