test/conformance/chainsaw/validate/clusterpolicy/standard/cel/authorizor-checks/with-permissions/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-account
  namespace: default
