test/conformance/chainsaw/validate/clusterpolicy/standard/cel/authorizor-checks/with-permissions/01-serviceaccount.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: serviceaccount
spec:
  timeouts: {}
  try:
  - apply:
      file: serviceaccount.yaml
