test/conformance/chainsaw/validate/clusterpolicy/standard/cel/authorizor-checks/with-permissions/04-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod
spec:
  timeouts: {}
  try:
  - command:
      args:
      - apply
      - -f
      - ./pod.yaml
      - --as=system:serviceaccount:default:test-account
      entrypoint: kubectl
