test/conformance/chainsaw/validate/clusterpolicy/standard/cel/authorizor-checks/with-permissions/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: with-permissions
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: serviceaccount.yaml
  - name: step-02
    try:
    - apply:
        file: rbac.yaml
  - name: step-03
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-04
    try:
    - command:
        args:
        - apply
        - -f
        - ./pod.yaml
        - --as=system:serviceaccount:default:test-account
        entrypoint: kubectl
